# CardGame

./: README.md  pyproject.toml
Cards/: BattleState.py  admin.py  battle_state.py  game_controller.py  models.py  serializers.py  urls.py  views.py
Cards/migrations/: 0001_initial.py  0002_hero_active_monster_active.py  0003_skill_remove_hero_skills_hero_skills.py  0004_monster_skills.py  0005_hero_is_character_type_monster_is_character_type.py
Config/: settings.py  urls.py
templates/: base.html
templates/Cards/: data_created.html  game_play.html  start_game.html
templates/game/: battle.html  battle_actions.html  battle_cards.html  battle_end.html  battle_hero_cards.html  battle_monster_cards.html  create_character.html  login.html  start_battle.html
